# kalshibot3

./: .env.example  .gitignore  CLAUDE.md  README.md  start.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_05_25_1848_4fab9c57deec_initial_schema_bet_position_suggestion_.py  2026_05_27_1319_85650fa4cfa1_bet_fill_table_bet_fees_remaining_.py  2026_05_27_2015_d193b8f26a27_bet_remaining_quantity_centi_for_sub_.py  (+11 more)
backend/scripts/: delete_bets.py  import_open_combos.py  scrub_cancelled.py
backend/src/: config.py  main.py  supervisor.py
backend/tests/: test_amend_order.py  test_auth.py  test_bet_service_fills.py  test_bet_service_snapshot_captures.py  test_cancel_order_guard.py  test_combo_leg_resolver.py  test_combo_recording.py  test_combo_sport.py  test_espn_news.py  test_espn_staleness.py  test_espn_summary_parse.py  test_espn_watchdog.py  test_event_burst.py  test_event_shot_feed.py  test_external_single.py  test_fills_sync_backlink.py  test_json_response.py  test_kickoff_matcher.py  test_ledger_routes.py  test_live_state.py  test_market_label.py  test_market_refresher.py  test_market_tier.py  test_nudge_evaluator.py  test_order_reconciler.py  test_order_sanity.py  test_order_v2_wire.py  test_parse_market_ticker.py  test_partner_context.py  test_partner_price_history.py  test_partner_suggestions.py  test_position_rest_mark.py  test_post_only_rejection.py  test_price_history.py  test_rest.py  test_schemas.py  test_spread_tickers.py  test_suggestion_kind.py  test_total_goals_series.py  test_wc_standings.py  (+1 more)
(+141 files in other folders)
