[project]
name = "kalshibot3"
version = "0.1.0"
description = "Personal Kalshi sports-betting workbook with an AI brain."
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Zyori" }]

dependencies = [
  # Web framework
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",

  # Config
  "pydantic>=2.9",
  "pydantic-settings>=2.6",

  # Database
  "sqlalchemy[asyncio]>=2.0",
  "aiosqlite>=0.20",
  "alembic>=1.14",

  # HTTP client (Kalshi REST, API-Football, Odds API)
  "httpx>=0.28",

  # Crypto for Kalshi RSA-PSS signing
  "cryptography>=44",

  # WebSocket client for Kalshi
  "websockets>=14",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6",
  "mypy>=1.13",
  "ruff>=0.8",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "UP",  # pyupgrade
  "SIM", # simplify
]
ignore = [
  "E501",  # line too long — ruff format handles this
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
